[gd_scene load_steps=7 format=3 uid="uid://cv4abwsjql6rl"]

[ext_resource type="Script" path="res://scripts/enemy/enemy.gd" id="1_jg4qh"]
[ext_resource type="Texture2D" uid="uid://b1doxbiansc1p" path="res://assets/PNG/Enemies/enemyBlack1.png" id="2_ehx2h"]
[ext_resource type="PackedScene" uid="uid://dts6fgeet0j6o" path="res://scenes/laser/laser_enemy.tscn" id="3_cbr5k"]
[ext_resource type="AudioStream" uid="uid://cys01s4ph4ph7" path="res://assets/Bonus/sfx_laser2.ogg" id="5_fafuk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3apgq"]
radius = 44.898

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_00gag"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:speed")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:score")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath(".:max_health")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath(".:clear_after_deaded")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false

[node name="Enemy" type="Area2D" groups=["enemy"]]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_jg4qh")
laser_tscn = ExtResource("3_cbr5k")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ehx2h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.42857, -2.85714)
scale = Vector2(0.7, 0.7)
shape = SubResource("CircleShape2D_3apgq")

[node name="Timer" type="Timer" parent="."]

[node name="LaserTimer" type="Timer" parent="."]

[node name="fireAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_fafuk")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_00gag")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
